# whalehub-server

./: .env.example  Dockerfile.optimized  README.md  code_reserve.ts  database-performance-indexes.sql  ecosystem.config.js  package-lock.json  package.json  soroban_liquidity_pool_contract.wasm
.well-known/: stellar.toml
scripts/: start.sh
src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
src/config/: typeOrm.config.ts
src/helpers/: error-handler.ts  memory-monitor.service.ts
src/middleware/: error.interceptor.ts  unlock-aqua-security.middleware.ts
src/modules/cron/: bribe-reward.service.ts  cron.module.ts  ice-locking.service.ts  staking-apy-indexer.service.ts  staking-reward.service.ts  vault-compound.service.ts  voting.service.ts
src/modules/soroban/: soroban.controller.ts  soroban.module.ts
src/modules/soroban/entities/: contract-event-log.entity.ts  contract-sync-status.entity.ts  hybrid-user-data.entity.ts  migration-status.entity.ts  transaction-log.entity.ts
src/modules/soroban/services/: contract-sync.service.ts  governance-contract.service.ts  liquidity-contract.service.ts  migration.service.ts  rewards-contract.service.ts  soroban-core.service.ts  staking-contract.service.ts  transaction.service.ts
src/modules/token/: account.service.ts  soroban.service.ts  stellar.service.ts  token.controller.spec.ts  token.controller.ts  token.module.ts  token.service.spec.ts  token.service.ts
src/modules/token/dto/: crate-add-lp.dto.ts  create-add-lp.dto.ts  create-redeem-lp.dto.ts  create-remove-lp.dto.ts  create-stake.dto.ts  create-token.dto.ts  stake-blub.dto.ts
src/soroban-contracts/: soroban_token_contract.wasm
src/soroban-contracts/staking-contract/: Cargo.toml  Makefile  README.md  deploy.sh  test_contracts.sh
src/soroban-contracts/staking-contract/contracts/governance/: Cargo.toml
src/soroban-contracts/staking-contract/contracts/governance/src/: lib.rs
src/soroban-contracts/staking-contract/contracts/liquidity/: Cargo.toml
src/soroban-contracts/staking-contract/contracts/liquidity/src/: lib.rs
src/soroban-contracts/staking-contract/contracts/rewards/: Cargo.toml
src/soroban-contracts/staking-contract/contracts/rewards/src/: lib.rs
src/soroban-contracts/staking-contract/contracts/shared/: Cargo.toml
src/soroban-contracts/staking-contract/contracts/shared/src/: lib.rs
src/soroban-contracts/staking-contract/contracts/staking/: Cargo.toml
src/soroban-contracts/staking-contract/contracts/staking/src/: lib.rs  test.rs
src/utils/: constants.ts  stellarAssets.ts
src/utils/models/: enums.ts  interfaces.ts
src/utils/typeorm/: index.ts
src/utils/typeorm/entities/: base.entity.ts  claimRecords.entity.ts  claimableRecords.entity.ts  lp-balances.entity.ts  pools.entity.ts  stake.entity.ts  token.entity.ts  treasuryDeposits.entity.ts  user.entity.ts
