[workspace]
members = [
    "contracts/shared",
    "contracts/staking", 
    "contracts/rewards",
    "contracts/liquidity",
    "contracts/governance"
]

[workspace.dependencies]
soroban-sdk = "21.7.0"
whalehub-shared = { path = "contracts/shared" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
