[package]
name = "whalehub-governance"
version = "0.1.0"
edition = "2021"
authors = ["WhaleHub Team"]
description = "WhaleHub Governance Contract for Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
whalehub-shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"] 