[package]
name = "whalehub-shared"
version = "0.1.0"
edition = "2021"
authors = ["WhaleHub Team"]
description = "Shared types and utilities for WhaleHub Soroban contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
 