[package]
name = "whalehub-staking"
version = "0.1.0"
edition = "2021"
authors = ["WhaleHub Team"]
description = "WhaleHub Staking Contract for Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
whalehub-shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"] 